<resources>
    <string name="app_name" translatable="false">Athena</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="unknown">Unknown</string>
    <string name="done">Done</string>
    <string name="unknown_value_number">Unknown value %s</string>
    <string name="unknown_value_enum">Unknown value %1$s (%2$d)</string>
    <string name="list_no_elements">None</string>
    <string name="go_back">Go back</string>
    <string name="permission_biometrics">Biometrics</string>
    <string name="permission_bluetooth">Bluetooth</string>
    <string name="permission_camera">Camera</string>
    <string name="permission_internet">Internet</string>
    <string name="permission_location">Location</string>
    <string name="permission_nfc">NFC</string>
    <string name="permission_ril">RIL</string>
    <string name="permission_sensors">Sensors</string>
    <string name="permission_uwb">UWB</string>
    <string name="permission_wifi">Wi-Fi</string>
    <string name="permissions_not_granted">Permissions not granted: %1$s</string>
    <string name="request_permissions">Request permissions</string>
    <string name="permissions_denied">Permissions denied: %1$s. Open the app settings to grant them</string>
    <string name="export_data">Export data</string>
    <string name="export_data_description">Do you want to export data as a JSON file? The app will ask you for missing permissions if needed</string>
    <string name="export_data_missing_permissions">Not all permissions have been granted, cannot export data</string>
    <string name="export_data_done">Data exported, the file may contain personal or device\'s confidential data, don\'t share to anyone unless you know what you\'re doing</string>
    <string name="export_data_open_file">Open file</string>
    <string name="section_device_name">Device</string>
    <string name="section_device_description">Check device info</string>
    <string name="device_general">General</string>
    <string name="device_device">Device</string>
    <string name="device_brand">Brand</string>
    <string name="device_model">Model</string>
    <string name="device_manufacturer">Manufacturer</string>
    <string name="device_product_name">Product name</string>
    <string name="device_hardware_name">Hardware name</string>
    <string name="device_board_name">Board name</string>
    <string name="device_sku" translatable="false">SKU</string>
    <string name="device_hardware_sku">Hardware SKU</string>
    <string name="device_odm_sku">ODM SKU</string>
    <string name="device_soc" translatable="false">SoC</string>
    <string name="device_soc_manufacturer">Manufacturer</string>
    <string name="device_soc_model">Model</string>
    <string name="device_ram" translatable="false">RAM</string>
    <string name="device_ram_total_memory">Total memory</string>
    <string name="device_ram_advertised_memory">Advertised memory</string>
    <string name="device_ram_available_memory">Available memory</string>
    <string name="device_ram_low_memory_threshold">Low memory threshold</string>
    <string name="device_ram_currently_on_low_memory">Currently on low memory</string>
    <string name="section_storage_name">Storage</string>
    <string name="section_storage_description">Storage info</string>
    <string name="storage_total_space">Total space</string>
    <string name="storage_available_space">Available space</string>
    <string name="storage_used_space">Used space</string>
    <string name="storage_internal_storage">Internal storage</string>
    <string name="storage_is_encrypted">Is encrypted</string>
    <string name="storage_encryption_type">Encryption type</string>
    <string name="storage_external_storage">External storage</string>
    <string name="storage_is_emulated">Is emulated</string>
    <string name="storage_is_removable">Is removable</string>
    <string name="storage_system_partitions">System partitions</string>
    <string name="storage_has_updatable_apex">Has updatable APEX</string>
    <string name="storage_uses_system_as_root">Uses system as root</string>
    <string name="storage_uses_ab">Uses A/B</string>
    <string name="storage_ab_ota_partitions">A/B OTA partitions</string>
    <string name="storage_uses_dynamic_partitions">Uses dynamic partitions</string>
    <string name="storage_uses_retrofitted_dynamic_partitions">Uses retrofitted dynamic partitions</string>
    <string name="storage_uses_virtual_ab">Uses virtual A/B</string>
    <string name="storage_uses_retrofitted_virtual_ab">Uses retrofitted virtual A/B</string>
    <string name="storage_uses_compressed_virtual_ab">Uses compressed virtual A/B</string>
    <string name="encryption_type_none">None</string>
    <string name="encryption_type_fde">Full Disk Encryption (FDE)</string>
    <string name="encryption_type_fbe">File-Based Encryption (FBE)</string>
    <string name="section_build_name">Build</string>
    <string name="section_build_description">Check current Android build info</string>
    <string name="build_information">Build information</string>
    <string name="build_information_fingerprint">Fingerprint</string>
    <string name="build_tags">Build tags</string>
    <string name="build_type">Build type</string>
    <string name="build_date">Build date</string>
    <string name="build_host">Build host</string>
    <string name="build_user">Build user</string>
    <string name="build_id">Build ID</string>
    <string name="build_display">Build display ID</string>
    <string name="build_version_release">Build version</string>
    <string name="build_version_codename">Build version codename</string>
    <string name="build_version_sdk_int">SDK version</string>
    <string name="build_version_preview_sdk_int">Preview SDK version</string>
    <string name="build_security_patch">Security patch level</string>
    <string name="build_base_os">Base OS</string>
    <string name="build_incremental">Incremental</string>
    <string name="build_release_or_codename">Release or codename</string>
    <string name="build_media_performance_class">Media performance class</string>
    <string name="build_release_or_preview_display">Release or preview display</string>
    <string name="jvm" translatable="false">JVM</string>
    <string name="jvm_name">Name</string>
    <string name="jvm_vendor">Vendor</string>
    <string name="jvm_version">Version</string>
    <string name="jvm_class_version">Class version</string>
    <string name="jvm_specification_name">Specification name</string>
    <string name="jvm_specification_vendor">Specification vendor</string>
    <string name="jvm_specification_version">Specification version</string>
    <string name="build_vendor" translatable="false">Vendor</string>
    <string name="build_vendor_security_patch_level">Security patch level</string>
    <string name="kernel">Kernel</string>
    <string name="kernel_version">Version</string>
    <string name="kernel_complete_version">Complete version</string>
    <string name="firmware">Firmware</string>
    <string name="firmware_bootloader_version">Bootloader version</string>
    <string name="firmware_radio_version">Radio version</string>
    <string name="fingerprinted_partitions">Fingerprinted partitions</string>
    <string name="section_security_name">Security</string>
    <string name="section_security_description">Security patch level and CVEs information</string>
    <string name="security_general">General</string>
    <string name="security_error">Error</string>
    <string name="security_error_android_version_not_supported">Android version not supported</string>
    <string name="security_error_failed_to_fetch_information">Failed to download information from Google servers, make sure you\'re connected to the Internet</string>
    <string name="security_available_updates">Available updates</string>
    <string name="security_is_device_fully_updated">Is device fully updated</string>
    <string name="security_device_security_patch_level">Device security patch level</string>
    <string name="security_published_security_patch_level">Published security patch level</string>
    <string name="current_user">Current user</string>
    <string name="user_id">User ID</string>
    <string name="is_admin_user">Is admin user</string>
    <string name="is_demo_user">Is demo user</string>
    <string name="is_managed_profile_user">Is managed profile user</string>
    <string name="is_profile">Is profile</string>
    <string name="is_system_user">Is system user</string>
    <string name="is_user_a_goat">Is user a goat</string>
    <string name="is_user_foreground">Is user foreground</string>
    <string name="is_user_unlocked">Is user unlocked</string>
    <string name="user_serial_number">User serial number</string>
    <string name="quiet_mode_enabled">Quiet mode enabled</string>
    <string name="user_creation_time">User creation time</string>
    <string name="gpu_opengl" translatable="false">OpenGL</string>
    <string name="gpu_renderer">Renderer</string>
    <string name="gpu_vendor">Vendor</string>
    <string name="gpu_version">Version</string>
    <string name="gpu_extensions">Extensions</string>
    <string name="audio_general">General</string>
    <string name="audio_current_mode">Current audio mode</string>
    <string name="audio_fixed_volume">Fixed volume</string>
    <string name="audio_call_screening_mode_supported">Call screening mode supported</string>
    <string name="audio_spatializer">Spatializer</string>
    <string name="audio_spatializer_available">Available</string>
    <string name="audio_spatializer_enabled">Enabled</string>
    <string name="audio_devices">Audio devices</string>
    <string name="audio_device_id">ID</string>
    <string name="audio_device_product_name">Product name</string>
    <string name="audio_device_address">Address</string>
    <string name="audio_device_type">Type</string>
    <string name="audio_device_role">Role</string>
    <string name="audio_device_channel_counts">Channel counts</string>
    <string name="audio_device_channel_masks">Channel masks</string>
    <string name="audio_device_channel_index_masks">Channel index masks</string>
    <string name="audio_device_sample_rates">Sample rates</string>
    <string name="audio_device_audio_descriptors">Audio descriptors</string>
    <string name="sensor_name">Name</string>
    <string name="sensor_id">ID</string>
    <string name="sensor_string_type">String type</string>
    <string name="sensor_type">Type</string>
    <string name="sensor_vendor">Vendor</string>
    <string name="sensor_version">Version</string>
    <string name="sensor_is_dynamic_sensor">Is dynamic sensor</string>
    <string name="sensor_is_wakeup_sensor">Is wakeup sensor</string>
    <string name="sensor_fifo_max_event_count">FIFO max event count</string>
    <string name="sensor_fifo_reserved_event_count">FIFO reserved event count</string>
    <string name="sensor_min_delay">Minimum delay</string>
    <string name="sensor_max_delay">Maximum delay</string>
    <string name="sensor_maximum_range">Maximum range</string>
    <string name="sensor_power">Power</string>
    <string name="sensor_reporting_mode">Reporting mode</string>
    <string name="sensor_resolution">Resolution</string>
    <string name="sensor_is_additional_info_supported">Is additional info supported</string>
    <string name="sensor_highest_direct_report_rate_level">Highest direct report rate level</string>
    <string name="media_codec_name">Name</string>
    <string name="media_codec_canonical_name">Canonical name</string>
    <string name="media_codec_is_encoder">Is encoder</string>
    <string name="media_codec_is_hardware_accelerated">Is hardware accelerated</string>
    <string name="media_codec_is_software_only">Is software only</string>
    <string name="media_codec_is_vendor">Is vendor</string>
    <string name="media_codec_supported_types">Supported types</string>
</resources>