<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: Sebastiano Barezzi
     SPDX-License-Identifier: Apache-2.0
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:orientation="vertical"
    android:paddingHorizontal="8dp"
    android:paddingVertical="12dp">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <dev.sebaubuntu.athena.ui.views.ListItem
                android:id="@+id/nameListItem"
                style="@style/Theme.Athena.SectionEntry"
                app:headlineText="@string/sensor_name" />

            <dev.sebaubuntu.athena.ui.views.ListItem
                android:id="@+id/idListItem"
                style="@style/Theme.Athena.SectionEntry"
                app:headlineText="@string/sensor_id" />

            <dev.sebaubuntu.athena.ui.views.ListItem
                android:id="@+id/stringTypeListItem"
                style="@style/Theme.Athena.SectionEntry"
                app:headlineText="@string/sensor_string_type" />

            <dev.sebaubuntu.athena.ui.views.ListItem
                android:id="@+id/typeListItem"
                style="@style/Theme.Athena.SectionEntry"
                app:headlineText="@string/sensor_type" />

            <dev.sebaubuntu.athena.ui.views.ListItem
                android:id="@+id/vendorListItem"
                style="@style/Theme.Athena.SectionEntry"
                app:headlineText="@string/sensor_vendor" />

            <dev.sebaubuntu.athena.ui.views.ListItem
                android:id="@+id/versionListItem"
                style="@style/Theme.Athena.SectionEntry"
                app:headlineText="@string/sensor_version" />

            <dev.sebaubuntu.athena.ui.views.ListItem
                android:id="@+id/isDynamicSensorListItem"
                style="@style/Theme.Athena.SectionEntry"
                app:headlineText="@string/sensor_is_dynamic_sensor" />

            <dev.sebaubuntu.athena.ui.views.ListItem
                android:id="@+id/isWakeupSensorListItem"
                style="@style/Theme.Athena.SectionEntry"
                app:headlineText="@string/sensor_is_wakeup_sensor" />

            <dev.sebaubuntu.athena.ui.views.ListItem
                android:id="@+id/fifoMaxEventCountListItem"
                style="@style/Theme.Athena.SectionEntry"
                app:headlineText="@string/sensor_fifo_max_event_count" />

            <dev.sebaubuntu.athena.ui.views.ListItem
                android:id="@+id/fifoReservedEventCountListItem"
                style="@style/Theme.Athena.SectionEntry"
                app:headlineText="@string/sensor_fifo_reserved_event_count" />

            <dev.sebaubuntu.athena.ui.views.ListItem
                android:id="@+id/minDelayListItem"
                style="@style/Theme.Athena.SectionEntry"
                app:headlineText="@string/sensor_min_delay" />

            <dev.sebaubuntu.athena.ui.views.ListItem
                android:id="@+id/maxDelayListItem"
                style="@style/Theme.Athena.SectionEntry"
                app:headlineText="@string/sensor_max_delay" />

            <dev.sebaubuntu.athena.ui.views.ListItem
                android:id="@+id/maximumRangeListItem"
                style="@style/Theme.Athena.SectionEntry"
                app:headlineText="@string/sensor_maximum_range" />

            <dev.sebaubuntu.athena.ui.views.ListItem
                android:id="@+id/powerListItem"
                style="@style/Theme.Athena.SectionEntry"
                app:headlineText="@string/sensor_power" />

            <dev.sebaubuntu.athena.ui.views.ListItem
                android:id="@+id/reportingModeListItem"
                style="@style/Theme.Athena.SectionEntry"
                app:headlineText="@string/sensor_reporting_mode" />

            <dev.sebaubuntu.athena.ui.views.ListItem
                android:id="@+id/resolutionListItem"
                style="@style/Theme.Athena.SectionEntry"
                app:headlineText="@string/sensor_resolution" />

            <dev.sebaubuntu.athena.ui.views.ListItem
                android:id="@+id/isAdditionalInfoSupportedListItem"
                style="@style/Theme.Athena.SectionEntry"
                app:headlineText="@string/sensor_is_additional_info_supported" />

            <dev.sebaubuntu.athena.ui.views.ListItem
                android:id="@+id/highestDirectReportRateLevelListItem"
                style="@style/Theme.Athena.SectionEntry"
                app:headlineText="@string/sensor_highest_direct_report_rate_level" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/doneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="8dp"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</LinearLayout>
