<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: 2023 Sebastiano Barezzi
     SPDX-License-Identifier: Apache-2.0
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="4dp"
        android:layout_marginVertical="8dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <dev.sebaubuntu.athena.ui.ListItem
                android:id="@+id/idListItem"
                style="@style/Theme.Athena.SectionEntry"
                app:headlineText="@string/audio_device_id"
                app:supportingText="@string/unknown" />

            <dev.sebaubuntu.athena.ui.ListItem
                android:id="@+id/productNameListItem"
                style="@style/Theme.Athena.SectionEntry"
                app:headlineText="@string/audio_device_product_name"
                app:supportingText="@string/unknown" />

            <dev.sebaubuntu.athena.ui.ListItem
                android:id="@+id/addressListItem"
                style="@style/Theme.Athena.SectionEntry"
                app:headlineText="@string/audio_device_address"
                app:supportingText="@string/unknown" />

            <dev.sebaubuntu.athena.ui.ListItem
                android:id="@+id/deviceTypeListItem"
                style="@style/Theme.Athena.SectionEntry"
                app:headlineText="@string/audio_device_type"
                app:supportingText="@string/unknown" />

            <dev.sebaubuntu.athena.ui.ListItem
                android:id="@+id/roleListItem"
                style="@style/Theme.Athena.SectionEntry"
                app:headlineText="@string/audio_device_role"
                app:supportingText="@string/unknown" />

            <dev.sebaubuntu.athena.ui.ListItem
                android:id="@+id/channelCountsListItem"
                style="@style/Theme.Athena.SectionEntry"
                app:headlineText="@string/audio_device_channel_counts"
                app:supportingText="@string/unknown" />

            <dev.sebaubuntu.athena.ui.ListItem
                android:id="@+id/channelMasksListItem"
                style="@style/Theme.Athena.SectionEntry"
                app:headlineText="@string/audio_device_channel_masks"
                app:supportingText="@string/unknown" />

            <dev.sebaubuntu.athena.ui.ListItem
                android:id="@+id/channelIndexMasksListItem"
                style="@style/Theme.Athena.SectionEntry"
                app:headlineText="@string/audio_device_channel_index_masks"
                app:supportingText="@string/unknown" />

            <dev.sebaubuntu.athena.ui.ListItem
                android:id="@+id/sampleRatesListItem"
                style="@style/Theme.Athena.SectionEntry"
                app:headlineText="@string/audio_device_sample_rates"
                app:supportingText="@string/unknown" />

            <dev.sebaubuntu.athena.ui.ListItem
                android:id="@+id/audioDescriptorsListItem"
                style="@style/Theme.Athena.SectionEntry"
                app:headlineText="@string/audio_device_audio_descriptors"
                app:supportingText="@string/unknown" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/doneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="16dp"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</LinearLayout>
