<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: 2023 Sebastiano Barezzi
     SPDX-License-Identifier: Apache-2.0
-->
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            style="@style/Theme.Athena.SectionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/Theme.Athena.SectionTitle"
                android:text="@string/audio_general" />

            <dev.sebaubuntu.athena.ui.views.ListItem
                android:id="@+id/currentAudioModeListItem"
                style="@style/Theme.Athena.SectionEntry"
                app:headlineText="@string/audio_current_mode"
                app:supportingText="@string/unknown" />

            <dev.sebaubuntu.athena.ui.views.ListItem
                android:id="@+id/fixedVolumeListItem"
                style="@style/Theme.Athena.SectionEntry"
                app:headlineText="@string/audio_fixed_volume"
                app:supportingText="@string/unknown" />

            <dev.sebaubuntu.athena.ui.views.ListItem
                android:id="@+id/callScreeningModeSupportedListItem"
                style="@style/Theme.Athena.SectionEntry"
                app:headlineText="@string/audio_call_screening_mode_supported"
                app:supportingText="@string/unknown" />

            <dev.sebaubuntu.athena.ui.views.ListItem
                android:id="@+id/devicesListItem"
                style="@style/Theme.Athena.SectionEntry"
                app:headlineText="@string/audio_devices"
                app:trailingIconImage="@drawable/ic_arrow_right" />

        </LinearLayout>

        <LinearLayout
            style="@style/Theme.Athena.SectionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/Theme.Athena.SectionTitle"
                android:text="@string/audio_spatializer" />

            <dev.sebaubuntu.athena.ui.views.ListItem
                android:id="@+id/spatializerAvailableListItem"
                style="@style/Theme.Athena.SectionEntry"
                app:headlineText="@string/audio_spatializer_available"
                app:supportingText="@string/unknown" />

            <dev.sebaubuntu.athena.ui.views.ListItem
                android:id="@+id/spatializerEnabledListItem"
                style="@style/Theme.Athena.SectionEntry"
                app:headlineText="@string/audio_spatializer_enabled"
                app:supportingText="@string/unknown" />

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
